bin/testsuite/tests/compiler/src/errors/compiler3124.swg
#global testerror "Err0120"
enum Col
{
    A
    B
}

public func titi3124(x: Col) {}
